--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "WomenDay",
+	"name": "women-day",
 	"compatibility_date": "2025-10-22",
 	"pages_build_output_dir": "./dist",
 	"observability": {
